# ts-type-assistant

./: .gitignore  Cargo.toml  README.md  enable.lua  test.ts
src/: cli.rs  field_parser.rs  main.rs  parser.rs  processor.rs  type_parser.rs  types.rs
