[package]
name = "ts-type-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
dashmap = "5.5.3"
oxc = "0.4.0"
rayon = "1.8.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
module_name_repetitions = "allow"
similar_names = "allow"
items_after_statements = "allow"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = 3
strip = "symbols"
